# benj-stocks-normalized

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
libs/daily_bars/: pyproject.toml
libs/daily_bars/src/daily_bars/: __init__.py  catalog.py  degrading.py  fusion.py
libs/daily_bars/tests/: test_catalog.py  test_degrading.py  test_fusion.py
libs/daily_bars_alpha_vantage/: pyproject.toml
libs/daily_bars_alpha_vantage/src/daily_bars_alpha_vantage/: __init__.py  alpha_vantage.py
libs/daily_bars_alpha_vantage/tests/: test_alpha_vantage_parse.py  test_alpha_vantage_source.py
libs/daily_bars_core/: pyproject.toml
libs/daily_bars_core/src/daily_bars_core/: __init__.py  compare.py  models.py  protocol.py  ranges.py
libs/daily_bars_core/tests/: test_compare.py  test_daily_bar.py
libs/daily_bars_stooq/: pyproject.toml
libs/daily_bars_stooq/src/daily_bars_stooq/: __init__.py  investor_adjust.py  parse.py  stooq.py
libs/daily_bars_stooq/tests/: test_parse_stooq_csv.py  test_retrieve_stooq.py  test_stooq_investor_adjust.py  test_stooq_sort.py
libs/daily_bars_yahoo/: pyproject.toml
libs/daily_bars_yahoo/src/daily_bars_yahoo/: __init__.py  yahoo.py
libs/daily_bars_yahoo/tests/: test_yahoo_source.py
src/benj_stocks_normalized/: __init__.py  api.py  convert.py  schema.py  transforms.py
tests/: test_api.py  test_convert.py  test_package_exports.py  test_tanh_pct_delta.py  test_transforms.py
