[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "daily-bars"
version = "0.1.0"
description = "Combined daily OHLCV access: registry over Stooq, Yahoo, and Alpha Vantage"
requires-python = ">=3.11"
dependencies = [
    "daily-bars-core>=0.1.0,<0.2",
    "daily-bars-stooq>=0.1.0,<0.2",
    "daily-bars-yahoo>=0.1.0,<0.2",
    "daily-bars-alpha-vantage>=0.1.0,<0.2",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
