[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "daily-bars-yahoo"
version = "0.1.0"
description = "Yahoo Finance daily OHLCV via yfinance"
requires-python = ">=3.11"
dependencies = [
    "daily-bars-core>=0.1.0,<0.2",
    "yfinance>=0.2.40",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pandas>=1.3"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
